tests/ui/typeck/constants/non_constant.sol
// Non-constant file-level variable
uint x = 7; //~ ERROR: only constant variables are allowed at file level
